--- a/public/scss/components/_sidebar.scss
+++ b/public/scss/components/_sidebar.scss
@@ -93,14 +93,21 @@
     flex-direction: column;
     align-items: flex-start;
     justify-content: space-between;
-    padding: 30px 20px 20px;
-    // padding-inline: 20px;
+    padding: 20px 0px;
+    overflow: auto;
     transform: translateX(-100%);
 
     &.active {
-      width: 250px;
+      width: 300px;
       transition: all .3s ease;
       transform: translateX(0);
+    }
+
+    .crossbtn {
+      width: 100%;
+      text-align: right;
+      text-align: -webkit-right;
+      padding: 0px 15px;
     }
   }
 }
