--- a/public/scss/components/_dashboard.scss
+++ b/public/scss/components/_dashboard.scss
@@ -160,6 +160,7 @@
 
     .btn-wrapper {
       width: 100%;
+
       button {
         width: 100%;
       }
@@ -167,6 +168,6 @@
   }
 
   .jobs-wrapper {
-    height: 100%;
+    height: auto;
   }
 }
