--- a/public/scss/components/_dashboard.scss
+++ b/public/scss/components/_dashboard.scss
@@ -40,6 +40,7 @@
 
     select {
       color: #585D6E;
+      cursor: pointer;
       padding-left: 20px;
       font-weight: 400;
       font-size: 14px;
@@ -54,6 +55,7 @@
   .similar-jobs {
     button {
       background: transparent;
+      cursor: pointer;
       border: 1px solid #737A91;
       font-weight: 300;
       font-size: 12px;
