--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -1,4 +1,5 @@
 @forward "tailwindcss";
+// include Custom SCSS
 @forward "../../public/scss/index.scss";
 
 :root {
@@ -7,6 +8,7 @@
   --primary: #0154AA
 }
 
+// Container Configuration
 @utility container {
   max-width: 1340px;
   margin-inline: auto;
@@ -29,36 +31,7 @@
   }
 }
 
-
-@font-face {
-  font-family: "NeueHasLight";
-  src: url("/fonts/neuehaas-black.ttf") format("ttf");
-  font-weight: 600;
-  font-style: normal;
-  font-display: swap;
-}
-
-
-@font-face {
-  font-family: "NeueHasMedium";
-  src: url("./fonts/neuehaas-medium.ttf") format("ttf");
-  font-weight: 400;
-  font-style: normal;
-  font-display: swap;
-}
-
-@font-face {
-  font-family: "NeueHasLight";
-  src: url("/fonts/neuehaas-light.ttf") format("ttf");
-  font-weight: 300;
-  font-style: normal;
-  font-display: swap;
-}
-
-
-
 body {
   background: var(--background);
   color: var(--foreground);
-  // font-family: "NeueHasLight", sans-serif;
 }
